# gifriend

./: .gitignore  Cargo.toml  README.md
examples/: simple_example.rs
src/: color.rs  color_table.rs  data_item.rs  data_items.rs  data_sub_block.rs  data_sub_blocks.rs  extension.rs  extensions.rs  frame.rs  frame_utils.rs  gif.rs  graphic_block.rs  graphic_rendering_block.rs  header.rs  image_data.rs  image_descriptor.rs  lib.rs  logical_screen_descriptor.rs  main.rs  table_based_image.rs  utils.rs
src/extensions/: application_extension.rs  comment_extension.rs  graphic_control_extension.rs  plain_text_extension.rs
