[package]
name = "gifriend"
version = "0.1.1"
authors = ["Yu Haidong <yuhaidongyhd+crates@gmail.com>"]
edition = "2018"

description = "An easy-to-use GIF parser"
repository = "https://github.com/teeceepee/gifriend"
license = "MIT/Apache-2.0"

keywords = ["gif", "parser"]
categories = ["parsing", "parser-implementations"]

[dependencies]
byteorder = "1.3.2"
lzw = "0.10.0"
